--- a/exercise 2/notebooks/XOR_operator.ipynb
+++ b/exercise 2/notebooks/XOR_operator.ipynb
@@ -2,9 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "source": [
-    "%matplotlib widget\n",
+    "%matplotlib inline\n",
     "import torch\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "source": [
     "class XOROperatorModel:\n",
     "    def __init__(self, W1=W1_init, W2=W2_init, b1=b1_init, b2=b2_init):\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "source": [
     "model = XOROperatorModel()\n",
     "\n",
@@ -77,8 +77,8 @@
     "    torch.rand((1,1), requires_grad=True)\n",
     ")\n",
     "\n",
-    "optimizer = torch.optim.SGD([model.b1, model.W1, model.W2, model.b1], lr=0.1)\n",
-    "optimizer2 = torch.optim.SGD([model2.b1, model2.W1, model2.W2, model2.b1], lr=0.1)\n",
+    "optimizer = torch.optim.SGD([model.b1, model.W1, model.W2, model.b2], lr=0.1)\n",
+    "optimizer2 = torch.optim.SGD([model2.b1, model2.W1, model2.W2, model2.b2], lr=0.1)\n",
     "for epoch in range(250000):\n",
     "    model.loss(train_x, train_y).backward()  \n",
     "    optimizer.step() \n",
@@ -106,9 +106,9 @@
       "Model 1 W1 = tensor([[-5.2275, 15.5728]], requires_grad=True), b1 = tensor([[ 10.6046, -10.4728],\n",
       "        [ 10.6046, -10.4728]], requires_grad=True), W2 = tensor([[10.0442],\n",
       "        [10.0395]], requires_grad=True), b2 = tensor([[-15.]], requires_grad=True), loss = tensor(0.5060, grad_fn=<BinaryCrossEntropyWithLogitsBackward>)\n",
-      "Model 2W1 = tensor([[3.6753, 3.9850]], requires_grad=True), b1 = tensor([[ 1.2059,  8.8101],\n",
-      "        [ 0.4316, -8.2116]], requires_grad=True), W2 = tensor([[  5.9239],\n",
-      "        [-13.3938]], requires_grad=True), b2 = tensor([[0.2939]], requires_grad=True), loss = tensor(0.5985, grad_fn=<BinaryCrossEntropyWithLogitsBackward>)\n"
+      "Model 2W1 = tensor([[0.8008, 0.6073]], requires_grad=True), b1 = tensor([[ 7.9493,  7.5883],\n",
+      "        [-7.9024, -7.6234]], requires_grad=True), W2 = tensor([[-7.2107],\n",
+      "        [-6.5187]], requires_grad=True), b2 = tensor([[0.9524]], requires_grad=True), loss = tensor(0.6191, grad_fn=<BinaryCrossEntropyWithLogitsBackward>)\n"
      ]
     }
    ],
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "source": [
     "xt =train_x.t()[0]\n",
     "yt =train_x.t()[1]\n",
@@ -175,7 +175,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "ac0bf0b6ef0440d9818df310519f531e"
+       "model_id": "cdd9688a4822496c8061f6cffee4c2df"
       }
      },
      "metadata": {}
