--- a/exercise 2/notebooks/NAND_operator.ipynb
+++ b/exercise 2/notebooks/NAND_operator.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "source": [
-    "%matplotlib widget\n",
+    "%matplotlib inline\n",
     "import torch\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -52,12 +52,21 @@
     "\n",
     "print(\"W = %s, b = %s, loss = %s\" %(model.W, model.b, model.loss(train_x, train_y)))"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "W = tensor([[-13.9010],\n",
+      "        [-13.9010]], requires_grad=True), b = tensor([[21.0183]], requires_grad=True), loss = tensor(0.0007, grad_fn=<BinaryCrossEntropyWithLogitsBackward>)\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "source": [
     "xt =train_x.t()[0]\n",
     "yt =train_x.t()[1]\n",
@@ -113,7 +122,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "aecbdf4845d24591a3809ff2f8f0af66"
+       "model_id": "f943547429d54787921a9aaddaa5b7f5"
       }
      },
      "metadata": {}
