--- a/exercise 3/nn_sequential_b.ipynb
+++ b/exercise 3/nn_sequential_b.ipynb
@@ -2,30 +2,67 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "source": [
+    "import torch\r\n",
+    "import torch.nn as nn\r\n",
+    "import torchvision\r\n",
+    "\r\n",
+    "\r\n",
+    "if torch.cuda.is_available(): \r\n",
+    " dev = \"cuda:0\" \r\n",
+    "else: \r\n",
+    " dev = \"cpu\" \r\n",
+    "device = torch.device(dev)\r\n",
+    "\r\n",
+    "mnist_train = torchvision.datasets.MNIST('./data', train=True, download=True)\r\n",
+    "x_train = mnist_train.data.reshape(-1, 1, 28, 28).float() \r\n",
+    "y_train = torch.zeros((mnist_train.targets.shape[0], 10))  \r\n",
+    "y_train[torch.arange(mnist_train.targets.shape[0]), mnist_train.targets] = 1 \r\n",
+    "\r\n",
+    "mnist_test = torchvision.datasets.MNIST('./data', train=False, download=True)\r\n",
+    "x_test = mnist_test.data.reshape(-1, 1, 28, 28).float() \r\n",
+    "y_test = torch.zeros((mnist_test.targets.shape[0], 10))  \r\n",
+    "y_test[torch.arange(mnist_test.targets.shape[0]), mnist_test.targets] = 1  \r\n",
+    "\r\n",
+    "mean = x_train.mean()\r\n",
+    "std = x_train.std()\r\n",
+    "x_train = (x_train - mean) / std\r\n",
+    "x_test = (x_test - mean) / std\r\n",
+    "\r\n",
+    "batches = 600\r\n",
+    "x_train_batches = torch.split(x_train, batches)\r\n",
+    "y_train_batches = torch.split(y_train, batches)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
    "execution_count": 16,
    "source": [
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import torchvision\n",
-    "\n",
-    "mnist_train = torchvision.datasets.MNIST('./data', train=True, download=True)\n",
-    "x_train = mnist_train.data.reshape(-1, 1, 28, 28).float() \n",
-    "y_train = torch.zeros((mnist_train.targets.shape[0], 10))  \n",
-    "y_train[torch.arange(mnist_train.targets.shape[0]), mnist_train.targets] = 1 \n",
-    "\n",
-    "mnist_test = torchvision.datasets.MNIST('./data', train=False, download=True)\n",
-    "x_test = mnist_test.data.reshape(-1, 1, 28, 28).float() \n",
-    "y_test = torch.zeros((mnist_test.targets.shape[0], 10))  \n",
-    "y_test[torch.arange(mnist_test.targets.shape[0]), mnist_test.targets] = 1  \n",
-    "\n",
-    "mean = x_train.mean()\n",
-    "std = x_train.std()\n",
-    "x_train = (x_train - mean) / std\n",
-    "x_test = (x_test - mean) / std\n",
-    "\n",
-    "batches = 600\n",
-    "x_train_batches = torch.split(x_train, batches)\n",
-    "y_train_batches = torch.split(y_train, batches)"
+    "class ConvolutionalNeuralNetworkModel(nn.Module):\r\n",
+    "    def __init__(self):\r\n",
+    "        super(ConvolutionalNeuralNetworkModel, self).__init__()\r\n",
+    "\r\n",
+    "        self.logits = nn.Sequential(\r\n",
+    "            nn.Conv2d(1, 32, kernel_size=5, padding=2), \r\n",
+    "            nn.MaxPool2d(kernel_size=2), \r\n",
+    "            nn.Conv2d(32, 64, kernel_size=5, padding=2),\r\n",
+    "            nn.MaxPool2d(kernel_size=2), \r\n",
+    "            nn.Flatten(), \r\n",
+    "            nn.Linear(64 * 7 * 7, 1024),\r\n",
+    "            nn.Flatten(), \r\n",
+    "            nn.Linear(1024, 10)).to(device)\r\n",
+    "\r\n",
+    "    def f(self, x):\r\n",
+    "        return torch.softmax(self.logits(x), dim=1)\r\n",
+    "\r\n",
+    "    def loss(self, x, y):\r\n",
+    "        return nn.functional.cross_entropy(self.logits(x), y.argmax(1)).to(device)\r\n",
+    "\r\n",
+    "    def accuracy(self, x, y):\r\n",
+    "        return torch.mean(torch.eq(self.f(x).argmax(1), y.argmax(1)).float()).to(device)"
    ],
    "outputs": [],
    "metadata": {}
@@ -34,72 +71,42 @@
    "cell_type": "code",
    "execution_count": 17,
    "source": [
-    "class ConvolutionalNeuralNetworkModel(nn.Module):\n",
-    "    def __init__(self):\n",
-    "        super(ConvolutionalNeuralNetworkModel, self).__init__()\n",
-    "\n",
-    "        self.logits = nn.Sequential(\n",
-    "            nn.Conv2d(1, 32, kernel_size=5, padding=2), \n",
-    "            nn.MaxPool2d(kernel_size=2), \n",
-    "            nn.Conv2d(32, 64, kernel_size=5, padding=2),\n",
-    "            nn.MaxPool2d(kernel_size=2), \n",
-    "            nn.Flatten(), \n",
-    "            nn.Linear(64 * 7 * 7, 1024),\n",
-    "            nn.Flatten(), \n",
-    "            nn.Linear(1024, 10))\n",
-    "\n",
-    "    def f(self, x):\n",
-    "        return torch.softmax(self.logits(x), dim=1)\n",
-    "\n",
-    "    def loss(self, x, y):\n",
-    "        return nn.functional.cross_entropy(self.logits(x), y.argmax(1))\n",
-    "\n",
-    "    def accuracy(self, x, y):\n",
-    "        return torch.mean(torch.eq(self.f(x).argmax(1), y.argmax(1)).float())"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "source": [
-    "model = ConvolutionalNeuralNetworkModel()\n",
-    "\n",
-    "optimizer = torch.optim.Adam(model.parameters(), 0.001)\n",
-    "for epoch in range(20):\n",
-    "    for batch in range(len(x_train_batches)):\n",
-    "        model.loss(x_train_batches[batch], y_train_batches[batch]).backward() \n",
-    "        optimizer.step()  \n",
-    "        optimizer.zero_grad()  \n",
-    "\n",
-    "    print(\"accuracy = %s\" % model.accuracy(x_test, y_test)) "
+    "model = ConvolutionalNeuralNetworkModel()\r\n",
+    "\r\n",
+    "optimizer = torch.optim.Adam(model.parameters(), 0.001)\r\n",
+    "for epoch in range(20):\r\n",
+    "    for batch in range(len(x_train_batches)):\r\n",
+    "        model.loss(x_train_batches[batch].to(device), y_train_batches[batch].to(device)).backward() \r\n",
+    "        optimizer.step()  \r\n",
+    "        optimizer.zero_grad()  \r\n",
+    "\r\n",
+    "    print(\"accuracy = %s\" % model.accuracy(x_test.to(device), y_test.to(device))) "
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "accuracy = tensor(0.9740)\n",
-      "accuracy = tensor(0.9815)\n",
-      "accuracy = tensor(0.9817)\n",
-      "accuracy = tensor(0.9826)\n",
-      "accuracy = tensor(0.9790)\n",
-      "accuracy = tensor(0.9787)\n",
-      "accuracy = tensor(0.9796)\n",
-      "accuracy = tensor(0.9824)\n",
-      "accuracy = tensor(0.9819)\n",
-      "accuracy = tensor(0.9800)\n",
-      "accuracy = tensor(0.9762)\n",
-      "accuracy = tensor(0.9782)\n",
-      "accuracy = tensor(0.9819)\n",
-      "accuracy = tensor(0.9782)\n",
-      "accuracy = tensor(0.9818)\n",
-      "accuracy = tensor(0.9770)\n",
-      "accuracy = tensor(0.9820)\n",
-      "accuracy = tensor(0.9798)\n",
-      "accuracy = tensor(0.9815)\n",
-      "accuracy = tensor(0.9791)\n"
+      "accuracy = tensor(0.9735, device='cuda:0')\n",
+      "accuracy = tensor(0.9832, device='cuda:0')\n",
+      "accuracy = tensor(0.9828, device='cuda:0')\n",
+      "accuracy = tensor(0.9810, device='cuda:0')\n",
+      "accuracy = tensor(0.9783, device='cuda:0')\n",
+      "accuracy = tensor(0.9773, device='cuda:0')\n",
+      "accuracy = tensor(0.9768, device='cuda:0')\n",
+      "accuracy = tensor(0.9816, device='cuda:0')\n",
+      "accuracy = tensor(0.9784, device='cuda:0')\n",
+      "accuracy = tensor(0.9824, device='cuda:0')\n",
+      "accuracy = tensor(0.9803, device='cuda:0')\n",
+      "accuracy = tensor(0.9812, device='cuda:0')\n",
+      "accuracy = tensor(0.9808, device='cuda:0')\n",
+      "accuracy = tensor(0.9804, device='cuda:0')\n",
+      "accuracy = tensor(0.9822, device='cuda:0')\n",
+      "accuracy = tensor(0.9818, device='cuda:0')\n",
+      "accuracy = tensor(0.9763, device='cuda:0')\n",
+      "accuracy = tensor(0.9836, device='cuda:0')\n",
+      "accuracy = tensor(0.9818, device='cuda:0')\n",
+      "accuracy = tensor(0.9837, device='cuda:0')\n"
      ]
     }
    ],
@@ -110,7 +117,7 @@
   "orig_nbformat": 4,
   "language_info": {
    "name": "python",
-   "version": "3.8.10",
+   "version": "3.6.8",
    "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
@@ -122,10 +129,10 @@
   },
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.8.10 64-bit"
+   "display_name": "Python 3.6.8 64-bit"
   },
   "interpreter": {
-   "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+   "hash": "f7291e4b392a32fbfa525b87d1bbd0a3d888adf3d0deca0c205c61b9e7284b82"
   }
  },
  "nbformat": 4,
