--- a/exercise 3/nn_sequential_c.ipynb
+++ b/exercise 3/nn_sequential_c.ipynb
@@ -42,32 +42,32 @@
    "cell_type": "code",
    "execution_count": 5,
    "source": [
-    "class ConvolutionalNeuralNetworkModel(nn.Module):\r\n",
-    "    def __init__(self):\r\n",
-    "        super(ConvolutionalNeuralNetworkModel, self).__init__()\r\n",
-    "\r\n",
-    "        self.logits = nn.Sequential(\r\n",
-    "            nn.Conv2d(1, 32, kernel_size=5, padding=2), \r\n",
-    "            nn.ReLU(),\r\n",
-    "            nn.MaxPool2d(kernel_size=2), \r\n",
-    "            nn.Conv2d(32, 64, kernel_size=5, padding=2),\r\n",
-    "            nn.ReLU(),\r\n",
-    "            nn.MaxPool2d(kernel_size=2), \r\n",
-    "            nn.Flatten(),\r\n",
-    "            nn.Linear(64 * 7 * 7, 1024),\r\n",
-    "            nn.Flatten(),\r\n",
-    "            nn.Linear(1024, 10)).to(device)\r\n",
-    "\r\n",
-    "    # Predictor\r\n",
-    "    def f(self, x):\r\n",
-    "        return torch.softmax(self.logits(x), dim=1)\r\n",
-    "\r\n",
-    "    # Cross Entropy loss\r\n",
-    "    def loss(self, x, y):\r\n",
-    "        return nn.functional.cross_entropy(self.logits(x), y.argmax(1)).to(device)\r\n",
-    "\r\n",
-    "    # Accuracy\r\n",
-    "    def accuracy(self, x, y):\r\n",
+    "class ConvolutionalNeuralNetworkModel(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(ConvolutionalNeuralNetworkModel, self).__init__()\n",
+    "\n",
+    "        self.logits = nn.Sequential(\n",
+    "            nn.Conv2d(1, 32, kernel_size=5, padding=2), \n",
+    "            nn.ReLU(),\n",
+    "            nn.MaxPool2d(kernel_size=2), \n",
+    "            nn.Conv2d(32, 64, kernel_size=5, padding=2),\n",
+    "            nn.ReLU(),\n",
+    "            nn.MaxPool2d(kernel_size=2), \n",
+    "            nn.Flatten(),\n",
+    "            nn.Linear(64 * 7 * 7, 1024),\n",
+    "            nn.Flatten(),\n",
+    "            nn.Linear(1024, 10)).to(device)\n",
+    "\n",
+    "    # Predictor\n",
+    "    def f(self, x):\n",
+    "        return torch.softmax(self.logits(x), dim=1)\n",
+    "\n",
+    "    # Cross Entropy loss\n",
+    "    def loss(self, x, y):\n",
+    "        return nn.functional.cross_entropy(self.logits(x), y.argmax(1)).to(device)\n",
+    "\n",
+    "    # Accuracy\n",
+    "    def accuracy(self, x, y):\n",
     "        return torch.mean(torch.eq(self.f(x).argmax(1), y.argmax(1)).float()).to(device)"
    ],
    "outputs": [],
@@ -77,16 +77,16 @@
    "cell_type": "code",
    "execution_count": 6,
    "source": [
-    "model = ConvolutionalNeuralNetworkModel()\r\n",
-    "\r\n",
-    "# Optimize: adjust W and b to minimize loss using stochastic gradient descent\r\n",
-    "optimizer = torch.optim.Adam(model.parameters(), 0.001)\r\n",
-    "for epoch in range(20):\r\n",
-    "    for batch in range(len(x_train_batches)):\r\n",
-    "        model.loss(x_train_batches[batch].to(device), y_train_batches[batch].to(device)).backward()  # Compute loss gradients\r\n",
-    "        optimizer.step()  # Perform optimization by adjusting W and b,\r\n",
-    "        optimizer.zero_grad()  # Clear gradients for next step\r\n",
-    "\r\n",
+    "model = ConvolutionalNeuralNetworkModel()\n",
+    "\n",
+    "# Optimize: adjust W and b to minimize loss using stochastic gradient descent\n",
+    "optimizer = torch.optim.Adam(model.parameters(), 0.001)\n",
+    "for epoch in range(20):\n",
+    "    for batch in range(len(x_train_batches)):\n",
+    "        model.loss(x_train_batches[batch].to(device), y_train_batches[batch].to(device)).backward()  # Compute loss gradients\n",
+    "        optimizer.step()  # Perform optimization by adjusting W and b,\n",
+    "        optimizer.zero_grad()  # Clear gradients for next step\n",
+    "\n",
     "    print(\"accuracy = %s\" % model.accuracy(x_test.to(device), y_test.to(device))) "
    ],
    "outputs": [
@@ -132,7 +132,7 @@
   "orig_nbformat": 4,
   "language_info": {
    "name": "python",
-   "version": "3.6.8",
+   "version": "3.8.10",
    "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
@@ -144,10 +144,10 @@
   },
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.6.8 64-bit"
+   "display_name": "Python 3.8.10 64-bit"
   },
   "interpreter": {
-   "hash": "f7291e4b392a32fbfa525b87d1bbd0a3d888adf3d0deca0c205c61b9e7284b82"
+   "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
   }
  },
  "nbformat": 4,
