--- a/exercise 3/FashionMinst.ipynb
+++ b/exercise 3/FashionMinst.ipynb
@@ -4,35 +4,35 @@
    "cell_type": "code",
    "execution_count": 13,
    "source": [
-    "import torch\r\n",
-    "import torch.nn as nn\r\n",
-    "import torchvision\r\n",
-    "if torch.cuda.is_available(): \r\n",
-    "    dev = \"cuda:0\" \r\n",
-    "else: \r\n",
-    "    dev = \"cpu\" \r\n",
-    "device =  torch.device(dev)\r\n",
-    "\r\n",
-    "\r\n",
-    "mnist_train = torchvision.datasets.FashionMNIST('./data/fashion', train=True, download=True)\r\n",
-    "x_train = mnist_train.data.reshape(-1, 1, 28, 28).float()  # torch.functional.nn.conv2d argument must include channels (1)\r\n",
-    "y_train = torch.zeros((mnist_train.targets.shape[0], 10))  # Create output tensor\r\n",
-    "y_train[torch.arange(mnist_train.targets.shape[0]), mnist_train.targets] = 1  # Populate output\r\n",
-    "\r\n",
-    "mnist_test = torchvision.datasets.FashionMNIST('./data/fashion', train=False, download=True)\r\n",
-    "x_test = mnist_test.data.reshape(-1, 1, 28, 28).float()  # torch.functional.nn.conv2d argument must include channels (1)\r\n",
-    "y_test = torch.zeros((mnist_test.targets.shape[0], 10))  # Create output tensor\r\n",
-    "y_test[torch.arange(mnist_test.targets.shape[0]), mnist_test.targets] = 1  # Populate output\r\n",
-    "\r\n",
-    "# Normalization of inputs\r\n",
-    "mean = x_train.mean()\r\n",
-    "std = x_train.std()\r\n",
-    "x_train = (x_train - mean) / std\r\n",
-    "x_test = (x_test - mean) / std\r\n",
-    "\r\n",
-    "# Divide training data into batches to speed up optimization\r\n",
-    "batches = 600\r\n",
-    "x_train_batches = torch.split(x_train, batches)\r\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torchvision\n",
+    "if torch.cuda.is_available(): \n",
+    "    dev = \"cuda:0\" \n",
+    "else: \n",
+    "    dev = \"cpu\" \n",
+    "device =  torch.device(dev)\n",
+    "\n",
+    "\n",
+    "mnist_train = torchvision.datasets.FashionMNIST('./data/fashion', train=True, download=True)\n",
+    "x_train = mnist_train.data.reshape(-1, 1, 28, 28).float()  # torch.functional.nn.conv2d argument must include channels (1)\n",
+    "y_train = torch.zeros((mnist_train.targets.shape[0], 10))  # Create output tensor\n",
+    "y_train[torch.arange(mnist_train.targets.shape[0]), mnist_train.targets] = 1  # Populate output\n",
+    "\n",
+    "mnist_test = torchvision.datasets.FashionMNIST('./data/fashion', train=False, download=True)\n",
+    "x_test = mnist_test.data.reshape(-1, 1, 28, 28).float()  # torch.functional.nn.conv2d argument must include channels (1)\n",
+    "y_test = torch.zeros((mnist_test.targets.shape[0], 10))  # Create output tensor\n",
+    "y_test[torch.arange(mnist_test.targets.shape[0]), mnist_test.targets] = 1  # Populate output\n",
+    "\n",
+    "# Normalization of inputs\n",
+    "mean = x_train.mean()\n",
+    "std = x_train.std()\n",
+    "x_train = (x_train - mean) / std\n",
+    "x_test = (x_test - mean) / std\n",
+    "\n",
+    "# Divide training data into batches to speed up optimization\n",
+    "batches = 600\n",
+    "x_train_batches = torch.split(x_train, batches)\n",
     "y_train_batches = torch.split(y_train, batches)"
    ],
    "outputs": [
@@ -51,32 +51,32 @@
    "cell_type": "code",
    "execution_count": 14,
    "source": [
-    "class ConvolutionalNeuralNetworkModel(nn.Module):\r\n",
-    "    def __init__(self):\r\n",
-    "        super(ConvolutionalNeuralNetworkModel, self).__init__()\r\n",
-    "\r\n",
-    "        self.logits = nn.Sequential(\r\n",
-    "            nn.Conv2d(1, 32, kernel_size=5, padding=2), \r\n",
-    "            nn.MaxPool2d(kernel_size=2), \r\n",
-    "            nn.Conv2d(32, 64, kernel_size=5, padding=2),\r\n",
-    "            nn.MaxPool2d(kernel_size=2), \r\n",
-    "            nn.Flatten(),\r\n",
-    "            nn.ReLU(),\r\n",
-    "            nn.Linear(64 * 7 * 7, 1024),\r\n",
-    "            nn.Flatten(),\r\n",
-    "            nn.ReLU(),\r\n",
-    "            nn.Linear(1024, 10)).to(device)\r\n",
-    "\r\n",
-    "    # Predictor\r\n",
-    "    def f(self, x):\r\n",
-    "        return torch.softmax(self.logits(x), dim=1)\r\n",
-    "\r\n",
-    "    # Cross Entropy loss\r\n",
-    "    def loss(self, x, y):\r\n",
-    "        return nn.functional.cross_entropy(self.logits(x), y.argmax(1)).to(device)\r\n",
-    "\r\n",
-    "    # Accuracy\r\n",
-    "    def accuracy(self, x, y):\r\n",
+    "class ConvolutionalNeuralNetworkModel(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(ConvolutionalNeuralNetworkModel, self).__init__()\n",
+    "\n",
+    "        self.logits = nn.Sequential(\n",
+    "            nn.Conv2d(1, 32, kernel_size=5, padding=2), \n",
+    "            nn.MaxPool2d(kernel_size=2), \n",
+    "            nn.Conv2d(32, 64, kernel_size=5, padding=2),\n",
+    "            nn.MaxPool2d(kernel_size=2), \n",
+    "            nn.Flatten(),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(64 * 7 * 7, 1024),\n",
+    "            nn.Flatten(),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(1024, 10)).to(device)\n",
+    "\n",
+    "    # Predictor\n",
+    "    def f(self, x):\n",
+    "        return torch.softmax(self.logits(x), dim=1)\n",
+    "\n",
+    "    # Cross Entropy loss\n",
+    "    def loss(self, x, y):\n",
+    "        return nn.functional.cross_entropy(self.logits(x), y.argmax(1)).to(device)\n",
+    "\n",
+    "    # Accuracy\n",
+    "    def accuracy(self, x, y):\n",
     "        return torch.mean(torch.eq(self.f(x).argmax(1), y.argmax(1)).float()).to(device)"
    ],
    "outputs": [],
@@ -86,16 +86,16 @@
    "cell_type": "code",
    "execution_count": 15,
    "source": [
-    "model = ConvolutionalNeuralNetworkModel().to(device)\r\n",
-    "\r\n",
-    "# Optimize: adjust W and b to minimize loss using stochastic gradient descent\r\n",
-    "optimizer = torch.optim.Adam(model.parameters(), 0.001)\r\n",
-    "for epoch in range(20):\r\n",
-    "    for batch in range(len(x_train_batches)):\r\n",
-    "        model.loss(x_train_batches[batch].to(device), y_train_batches[batch].to(device)).backward()  # Compute loss gradients\r\n",
-    "        optimizer.step()  # Perform optimization by adjusting W and b,\r\n",
-    "        optimizer.zero_grad()  # Clear gradients for next step\r\n",
-    "\r\n",
+    "model = ConvolutionalNeuralNetworkModel().to(device)\n",
+    "\n",
+    "# Optimize: adjust W and b to minimize loss using stochastic gradient descent\n",
+    "optimizer = torch.optim.Adam(model.parameters(), 0.001)\n",
+    "for epoch in range(20):\n",
+    "    for batch in range(len(x_train_batches)):\n",
+    "        model.loss(x_train_batches[batch].to(device), y_train_batches[batch].to(device)).backward()  # Compute loss gradients\n",
+    "        optimizer.step()  # Perform optimization by adjusting W and b,\n",
+    "        optimizer.zero_grad()  # Clear gradients for next step\n",
+    "\n",
     "    print(\"accuracy = %s\" % model.accuracy(x_test.to(device), y_test.to(device))) "
    ],
    "outputs": [
@@ -141,7 +141,7 @@
   "orig_nbformat": 4,
   "language_info": {
    "name": "python",
-   "version": "3.6.8",
+   "version": "3.8.10",
    "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
@@ -153,10 +153,10 @@
   },
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.6.8 64-bit"
+   "display_name": "Python 3.8.10 64-bit"
   },
   "interpreter": {
-   "hash": "f7291e4b392a32fbfa525b87d1bbd0a3d888adf3d0deca0c205c61b9e7284b82"
+   "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
   }
  },
  "nbformat": 4,
