--- a/exercise 3/nn_sequential_b.ipynb
+++ b/exercise 3/nn_sequential_b.ipynb
@@ -71,15 +71,15 @@
    "cell_type": "code",
    "execution_count": 17,
    "source": [
-    "model = ConvolutionalNeuralNetworkModel()\r\n",
-    "\r\n",
-    "optimizer = torch.optim.Adam(model.parameters(), 0.001)\r\n",
-    "for epoch in range(20):\r\n",
-    "    for batch in range(len(x_train_batches)):\r\n",
-    "        model.loss(x_train_batches[batch].to(device), y_train_batches[batch].to(device)).backward() \r\n",
-    "        optimizer.step()  \r\n",
-    "        optimizer.zero_grad()  \r\n",
-    "\r\n",
+    "model = ConvolutionalNeuralNetworkModel()\n",
+    "\n",
+    "optimizer = torch.optim.Adam(model.parameters(), 0.001)\n",
+    "for epoch in range(20):\n",
+    "    for batch in range(len(x_train_batches)):\n",
+    "        model.loss(x_train_batches[batch].to(device), y_train_batches[batch].to(device)).backward() \n",
+    "        optimizer.step()  \n",
+    "        optimizer.zero_grad()  \n",
+    "\n",
     "    print(\"accuracy = %s\" % model.accuracy(x_test.to(device), y_test.to(device))) "
    ],
    "outputs": [
@@ -117,7 +117,7 @@
   "orig_nbformat": 4,
   "language_info": {
    "name": "python",
-   "version": "3.6.8",
+   "version": "3.8.10",
    "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
@@ -129,10 +129,10 @@
   },
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.6.8 64-bit"
+   "display_name": "Python 3.8.10 64-bit"
   },
   "interpreter": {
-   "hash": "f7291e4b392a32fbfa525b87d1bbd0a3d888adf3d0deca0c205c61b9e7284b82"
+   "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
   }
  },
  "nbformat": 4,
