--- a/exercise 4/LSTMEmojiModel.ipynb
+++ b/exercise 4/LSTMEmojiModel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 39,
    "source": [
     "\n",
     "import torch\n",
@@ -11,15 +11,16 @@
     "\n",
     "emojis = {\n",
     "    'hat': '\\U0001F3A9',\n",
-    "    'cat': '\\U0001F408',\n",
     "    'rat': '\\U0001F400',\n",
+    "    'cat': '\\U0001F408',\n",
     "    'flat': '\\U0001F3E2',\n",
     "    'matt': '\\U0001F468',\n",
     "    'cap': '\\U0001F9E2',\n",
     "    'son': '\\U0001F466'\n",
     "}\n",
     "\n",
-    "index_to_emoji = [emojis['hat'], emojis['rat'], emojis['cat'], emojis['flat'], emojis['matt'], emojis['cap'], emojis['son']]             \n",
+    "\n",
+    "index_to_emoji =[value for _,value in emojis.items()]\n",
     "\n",
     "index_to_char = [' ', 'h', 'a', 't', 'r','c', 'f', 'l', 'm', 'p', 's', 'o', 'n']\n",
     "\n",
@@ -54,14 +55,27 @@
     "        [emojies[4], emojies[4], emojies[4], emojies[4]],\n",
     "        [emojies[5], emojies[5], emojies[5], emojies[5]],\n",
     "        [emojies[6], emojies[6], emojies[6], emojies[6]]], \n",
-    "        dtype=torch.float)"
+    "        dtype=torch.float)\n",
+    "\n",
+    "\n",
+    "print(x_train.shape)\n",
+    "print(y_train.shape)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "torch.Size([7, 4, 1, 13])\n",
+      "torch.Size([7, 4, 7])\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 40,
    "source": [
     "\n",
     "class LongShortTermMemoryModel(nn.Module):\n",
@@ -90,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 41,
    "source": [
     "model = LongShortTermMemoryModel(encoding_size, emoji_encoding_size)\n",
     "\n",
@@ -107,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 42,
    "source": [
     "def generate_emoji(string):\n",
     "    y = -1\n",
