gotta do math soon

--- a/exercise 4/LSTMTextModel.ipynb
+++ b/exercise 4/LSTMTextModel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 1,
    "source": [
     "import torch\n",
     "import numpy as np\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 2,
    "source": [
     "\n",
     "class LongShortTermMemoryModel(nn.Module):\n",
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 3,
    "source": [
     "\n",
     "\n",
@@ -96,10 +96,10 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      " hlllo     d \n",
-      " hllloworld  \n",
+      " hllloo      \n",
+      " hllloowwrrld\n",
       " hlllo world \n",
-      " hello world \n",
+      " hlllo world \n",
       " hello world \n",
       " hello world \n",
       " hello world \n",
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 4,
    "source": [
     "text = ' h'\n",
     "model.reset()\n",
@@ -170,7 +170,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      " hello world world world world world world world worl\n"
+      " hello world world world world  world world world  hr\n"
      ]
     }
    ],
